Refactor Maven invokation